[project]
name = "pncc_tee_time"
version = "0.1.0"
description = "Automated tee time booking for Porter's Neck Country Club"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Bill Lueckenbach", email = "bill.lueckenbach@gmail.com" }
]
keywords = ["golf", "tee-time", "automation", "selenium", "porters-neck"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "selenium>=4.20",
]

[project.optional-dependencies]
dev = ["pytest", "black", "mypy", "ruff"]
docs = ["sphinx"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]

# -------------------------------
# Ruff configuration
# -------------------------------
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"